@@ -1,0 +1,33 @@
+language: c
+
+compiler:
+  - gcc
+
+matrix:
+  include:
+    - compiler: gcc
+      env: CONFIGURE_OPTION='-Duselongdouble -Accflags="-march=native"'
+    - compiler: gcc
+      env: CONFIGURE_OPTION='-Duse64bitall -Dusethreads'
+    - compiler: gcc
+      env: CONFIGURE_OPTION='-Accflags=-m32 -Aldflags=-m32 -Alddlflags=-m32'
+    - compiler: gcc
+      env: CONFIGURE_OPTION='-Duse64bitall -Dusethreads'
+    - compiler: gcc
+      env: CONFIGURE_OPTION='-Duselongdouble -DDEBUGGING'
+    - compiler: gcc
+      env: CONFIGURE_OPTION='-Duse64bitall -Dusethreads -DDEBUGGING'
+    - compiler: clang
+      env: CONFIGURE_OPTION='-Duselongdouble'
+    - compiler: clang
+      env: CONFIGURE_OPTION='-Duse64bitall -Dusethreads'
+
+install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq build-essential libtool
+
+script:
+  - ./Configure -des -Dusedevel -Dusecperl -Uversiononly -Dcc=$CC $CONFIGURE_OPTION -Dprefix=$HOME/perl-blead && TEST_JOBS=2 make -j2 test_harness && make install && $HOME/perl-blead/bin/cperlivp
+after_script:
+cache:
+  apt: true
